--- a/client/my-app/src/routes/VolunteerApplication.css
+++ b/client/my-app/src/routes/VolunteerApplication.css
@@ -12,6 +12,38 @@ h2 {
     margin-bottom: 2%;
 }
 
+h3 {
+    width: 118px;
+    height: 20px;
+
+    font-family: 'Avenir';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 20px;
+    line-height: 100%;
+
+    display: flex;
+    align-items: center;
+    letter-spacing: -0.035em;
+
+    color: #4E4E4E;
+    margin-top: 7%;
+}
+
+h4 {
+    width: 35px;
+    height: 28px;
+
+    font-family: 'Avenir';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 28px;
+    margin-top: 1%;
+
+    color: #686868;
+}
+
 p {
     font-family: 'Avenir';
     font-style: normal;
@@ -78,4 +110,43 @@ a:hover {
 
 .Box {
     box-shadow: none;
+}
+
+.form-section {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+}
+
+.flex-items {
+    display: flex;
+    justify-content: space-between;
+}
+
+.MuiBox-root.css-19kzrtu {
+    padding: 0;
+}
+
+.MuiInputLabel-filled.css-e4w4as-MuiFormLabel-root-MuiInputLabel-root {
+    font-size: 16px;
+    font-family: 'Avenir';
+    font-style: normal;
+}
+
+.MuiInputLabel-filled.css-o943dk-MuiFormLabel-root-MuiInputLabel-root.Mui-focused {
+    color: #00747B;
+}
+
+
+.MuiInputBase-formControl.css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root {
+    font-size: 16px;
+}
+
+.MuiTextField-root.css-1u3bzj6-MuiFormControl-root-MuiTextField-root {
+    margin-bottom: 10%;
+}
+
+.halfLength {
+    width: 225px;
 }
