new div setup Team/Chapter/Select Chapter

--- a/client/my-app/src/routes/VolunteerApplication.css
+++ b/client/my-app/src/routes/VolunteerApplication.css
@@ -190,3 +190,8 @@ a:hover {
     background-color: #f0f0f0;
 }
 
+.MuiInputLabel-outlined.css-1sumxir-MuiFormLabel-root-MuiInputLabel-root.Mui-focused {
+    color: #00747B;
+}
+
+
