--- a/client/my-app/src/routes/ApplicationSubmitted.css
+++ b/client/my-app/src/routes/ApplicationSubmitted.css
@@ -2,8 +2,7 @@ body {
     background-color: #FBF9F2;
 }
 
-
-.hi {
+.submitted-header {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,34 +11,25 @@ body {
     padding-left: 13%;
     padding-right: 13%;
     gap: 61px;
-
     position: absolute;
     width: 63.49%;
     left: 18.25%;
-    /* top: calc(50% - 672.89px/2 - 0px); */
     top: 155.55px;
-
     background: white;
     border-radius: 10px;
 }
 
-.application-Submitted {
-    /* APPLICATION SUBMITTED */
-
+.application-submitted {
     font-family: 'Avenir';
     font-style: normal;
     font-weight: 800;
     font-size: 28px;
     line-height: 100%;
-    /* identical to box height, or 28px */
     display: flex;
     align-items: center;
     text-align: center;
     letter-spacing: -0.035em;
-
-
     color: #4E4E4E;
-
     /* Inside auto layout */
     flex: none;
     order: 0;
@@ -47,18 +37,13 @@ body {
 }
 
 .thank-you {
-
     font-family: 'Avenir';
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
     line-height: 20px;
-    /* or 125% */
     text-align: center;
-
     color: #4E4E4E;
-
-
     /* Inside auto layout */
     flex: none;
     order: 1;
